# diplom_project

./: CMakeLists.txt  README.md
config/: config.json  requests.json
inc/: Converter.h  InvertedIndex.h  SearchServer.h
resources/: file002.txt
src/: CMakeLists.txt  Converter.cpp  InvertedIndex.cpp  SearchServer.cpp  diplom_project.cpp
tests/: All_tests.cpp  CMakeLists.txt
